--- a/ThirdStep/package.json
+++ b/ThirdStep/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "second_step",
+  "name": "third_step",
   "version": "0.1.0",
   "bin": {
-    "second_step": "bin/second_step.js"
+    "third_step": "bin/third_step.js"
   },
   "scripts": {
     "build": "tsc",
@@ -22,6 +22,7 @@
   "dependencies": {
     "@types/aws-lambda": "^8.10.125",
     "aws-cdk-lib": "2.103.1",
+    "aws-lambda": "^1.0.7",
     "constructs": "^10.0.0",
     "source-map-support": "^0.5.21"
   }
